@@ -1,7 +1,7 @@
 Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
-Version: 1.1.8
+Version: 1.2.0
 Date: 2017-01-01
 Author: Margaret Roberts [aut, cre], 
         Brandon Stewart [aut, cre],
